--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Sasha Cheek<br></h2>
-        <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Freelancer</span></p>
+        <p>I am <span class="typed" data-typed-items="a Systems Integrations Specialist, a Freelance Science Writer, Bridging the gap between systems and narratives">Bridging the gap between systems and narratives</span></p>
         <div class="social-links">
           <a href="#"><i class="bi bi-twitter-x"></i></a>
           <a href="#"><i class="bi bi-facebook"></i></a>
