--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <div class="row gy-4 justify-content-between">
           <div class="col-lg-4 profile-img align-self-start">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="https://media.licdn.com/dms/image/v2/D4E03AQFhIHTA-7Yisg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1710599898260?e=1760572800&v=beta&t=4OgrGlAuEfvje2SDfZQ4JYN4I_4Kpzwpamn-mRMMr4w" class="img-fluid" alt="">
           </div>
           <div class="col-lg-7 content">
             <h3>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to demystify engineering and science through storytelling.</h3>
