--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
+          <li><a href="#resume">Resume</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -314,6 +315,105 @@
       </div>
 
     </section><!-- /Testimonials Section -->
+
+    <!-- Resume Section [Lonely Bootstrap Addition] -->
+    <section class="resume py-5 d-section" id="resume">
+        <div class="container">
+          <div class="main-title pb-4">
+            <h2 class="pb-3 mb-3 playfair fw-bolder dark-title position-relative">Resume</h2>
+            <p class="dark-text m-0">
+              Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem.
+              Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
+              Quia fugiat sit in iste officiis commodi quidem hic quas.
+            </p>
+          </div>
+          <div class="row">
+            <div class="col-lg-6">
+              <h3 class="my-3 blue-gray poppins">Sumary</h3>
+              <div class="resume-item ps-4 position-relative">
+                <h4 class="mb-2 playfair fs-5">Alice Barkley</h4>
+                <p class="mb-3 dark-text">
+                  <em>
+                    Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing
+                    user-centered digital/print marketing material from initial concept to final, polished deliverable.
+                  </em>
+                </p>
+                <ul class="ps-3 mb-3">
+                  <li class="pb-2 dark-text">Portland par 127,Orlando, FL</li>
+                  <li class="pb-2 dark-text">+(123) 456-7891</li>
+                  <li class="pb-2 dark-text">alice.barkley@example.com </li>
+                </ul>
+              </div>
+              <h3 class="my-3 blue-gray poppins">Education</h3>
+              <div class="resume-item ps-4 pb-4 position-relative">
+                <h4 class="mb-2 playfair fs-5">Master of Fine Arts & Graphic Design</h4>
+                <h5 class="py-1 px-2 mb-2 dark-text poppins">2015 - 2016</h5>
+                <p class="mb-3 dark-text"><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                <p class="dark-text">
+                  Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit.
+                  Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend
+                </p>
+              </div>
+              <div class="resume-item ps-4 position-relative">
+                <h4 class="mb-2 playfair fs-5">Bachelor of Fine Arts & Graphic Design</h4>
+                <h5 class="py-1 px-2 mb-2 dark-text poppins">2010 - 2014</h5>
+                <p class="mb-3 dark-text"><em>Rochester Institute of Technology, Rochester, NY</em></p>
+                <p class="dark-text">
+                  Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
+                  unde vitae rerum
+                  voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <h3 class="my-3 blue-gray poppins">Professional Experience</h3>
+              <div class="resume-item ps-4 pb-4 position-relative">
+                <h4 class="mb-2 playfair fs-5">Senior graphic design specialist</h4>
+                <h5 class="py-1 px-2 mb-2 dark-text poppins">2019 - Present</h5>
+                <p class="mb-3 dark-text"><em>Experion, New York, NY</em></p>
+                <ul class="ps-3 mb-3">
+                  <li class="pb-2 dark-text">
+                    Lead in the design, development, and implementation of the graphic,
+                    layout, and production communication materials
+                  </li>
+                  <li class="pb-2 dark-text">
+                    Delegate tasks to the 7 members of the design team
+                    and provide counsel on all aspects of the project.
+                  </li>
+                  <li class="pb-2 dark-text">
+                    Supervise the assessment of all graphic materials
+                    in order to ensure quality and accuracy of the design
+                  </li>
+                  <li class="pb-2 dark-text">
+                    Oversee the efficient use of production
+                    project budgets ranging from $2,000 - $25,000
+                  </li>
+                </ul>
+              </div>
+              <div class="resume-item ps-4 position-relative">
+                <h4 class="mb-2 playfair fs-5">Graphic design specialist</h4>
+                <h5 class="py-1 px-2 mb-2 dark-text poppins">2017 - 2018</h5>
+                <p class="mb-3 dark-text"><em>Stepping Stone Advertising, New York, NY</em></p>
+                <ul class="ps-3 mb-3">
+                  <li class="pb-2 dark-text">
+                    Developed numerous marketing programs (logos, brochures,infographics, presentations, and
+                    advertisements).
+                  </li>
+                  <li class="pb-2 dark-text">
+                    Managed up to 5 projects or tasks at a given time while under pressure
+                  </li>
+                  <li class="pb-2 dark-text">
+                    Recommended and consulted with clients on the most appropriate graphic design
+                  </li>
+                  <li class="pb-2 dark-text">
+                    Created 4+ design presentations and proposals a month for clients and account managers
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section><!-- /Resume Section [Lonely Bootstrap Addition] -->
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
