scheek-resume-updates-v02-9.14.25

--- a/index.html
+++ b/index.html
@@ -317,16 +317,17 @@
     </section><!-- /Testimonials Section -->
 
     <!-- Resume Section [Lonely Bootstrap Addition] -->
+    <section id="resume" class="resume section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Resume</h2>
+      </div><!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <!-- Resume Section [Lonely Bootstrap Addition] -->
     <section class="resume py-5 d-section" id="resume">
         <div class="container">
-          <div class="main-title pb-4">
-            <h2 class="pb-3 mb-3 playfair fw-bolder dark-title position-relative">Resume</h2>
-            <p class="dark-text m-0">
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem.
-              Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
-            </p>
-          </div>
           <div class="row">
             <div class="col-lg-6">
               <h3 class="my-3 blue-gray poppins">Sumary</h3>
