--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Have a question, need help with a project, or just talk about tech? I'm always happy to connect. Send me a message, and I will respond within 24-48 hours.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
