scheek-masthead-updates-9.14.25

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Sasha Cheek<br></h2>
-        <p>I am <span class="typed" data-typed-items="a Systems Integrations Specialist, a Freelance Science Writer, Bridging the gap between systems and narratives">Bridging the gap between systems and narratives</span></p>
+        <p>I am <span class="typed" data-typed-items="a Systems Integration Specialist, a Freelance Science Writer, bridging the gap between systems and narratives">Systems Integration Specialist</span></p>
+        <p style="opacity: 0.5;">AI * APIs * Systems Engineering * Particle Physics * Space Science</p>
         <div class="social-links">
           <a href="#"><i class="bi bi-twitter-x"></i></a>
           <a href="#"><i class="bi bi-facebook"></i></a>
