--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
     <!-- Resume Section [Lonely Bootstrap Addition] -->
     <section class="resume py-5 d-section" id="resume">
         <div class="container">
