--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">HOME</a></li>
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#services">SERVICES</a></li>
-          <li><a href="#testimonials">TESTIMONIALS</a></li>
-          <li><a href="#resume">RESUME</a></li>
-          <li><a href="#portfolio">PORTFOLIO</a></li>
-          <li><a href="#contact">CONTACT</a></li>
+          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#resume">Resume</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -70,7 +69,7 @@
       <img src="assets/img/spacecraft-hero-bg.jpg" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>SASHA CHEEK<br></h2>
+        <h2>Sasha Cheek<br></h2>
         <p>I am <span class="typed" data-typed-items="a Systems Integration Specialist, a Freelance Science Writer, bridging the gap between systems and narratives">Systems Integration Specialist</span></p>
         <p style="opacity: 0.8;">AI * APIs * Systems Engineering * Particle Physics * Space Science</p>
         <div class="social-links">
@@ -88,7 +87,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>ABOUT</h2>
+        <h2>About</h2>
 
       </div><!-- End Section Title -->
 
@@ -114,7 +113,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>SERVICES</h2>
+        <h2>Services</h2>
         <p>The services I offer cover technical consulting, mentorship and guidance for individuals in engineering and tech, integrations, and freelance science writing services.</p>
       </div><!-- End Section Title -->
 
@@ -170,7 +169,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>TESTIMONIALS</h2>
+        <h2>Testimonials</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
@@ -239,7 +238,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>RESUME</h2>
+        <h2>Resume</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
@@ -249,7 +248,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <h3 class="my-3 blue-gray poppins">Summary</h3>
+              <h3 class="my-3 blue-gray poppins">Sumary</h3>
               <div class="resume-item ps-4 position-relative">
                 <h4 class="mb-2 playfair fs-5">Alice Barkley</h4>
                 <p class="mb-3 dark-text">
@@ -340,7 +339,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>PORTFOLIO</h2>
+        <h2>Portfolio</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
@@ -441,7 +440,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>CONTACT</h2>
+        <h2>Contact</h2>
         <p>Have a question, need help with a project, or just talk about tech? I'm always happy to connect. Send me a message, and I will respond within 24-48 hours.</p>
       </div><!-- End Section Title -->
 
