--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <form action="https://formspree.io/f/xovlzkjj" method="post" data-aos="fade-up" data-aos-delay="300">
+        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="300">
           <div class="row gy-4">
 
             <div class="col-md-6">
@@ -461,6 +461,10 @@
               <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
             </div>
 
+            <div class="col-md-12">
+              <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+            </div>
+            
             <div class="col-md-12 text-center">
               <div class="loading">Loading</div>
               <div class="error-message"></div>
@@ -481,7 +485,7 @@
   <footer id="footer" class="footer light-background">
     <div class="container">
       <h3 class="sitename">Sasha Cheek | Portfolio</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>Bridging the gap between systems and narrative.</p>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
@@ -491,7 +495,7 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Folio</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">Sasha Cheek | Portfolio</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
@@ -512,7 +516,7 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!--script src="assets/vendor/php-email-form/validate.js"></script>-->
+  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
