--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
           <div class="row gy-4">
 
             <div class="col-md-6">
-              <input type="text" name="name" class="form-control" placeholder="Full Name" required="">
+              <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
             </div>
 
             <div class="col-md-6 ">
@@ -458,13 +458,13 @@
             </div>
 
             <div class="col-md-12">
-              <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+              <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
             </div>
 
             <div class="col-md-12">
-              <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+              <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
             </div>
-            
+
             <div class="col-md-12 text-center">
               <div class="loading">Loading</div>
               <div class="error-message"></div>
