--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
         <p>I am <span class="typed" data-typed-items="a Systems Integration Specialist, a Freelance Science Writer, bridging the gap between systems and narratives">Systems Integration Specialist</span></p>
         <p style="opacity: 0.8;">AI * APIs * Systems Engineering * Particle Physics * Space Science</p>
         <div class="social-links">
-          <a href="#"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
           <a href="#"><i class="bi bi-facebook"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/sasha-cheek/"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
@@ -487,11 +486,9 @@
       <h3 class="sitename">Sasha Cheek | Portfolio</h3>
       <p>Bridging the gap between systems and narrative.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
+        <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/sasha-cheek/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
