scheek_accordionstyle_blog_updates-9.17.25

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#resume">Resume</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#portfolio">Technical Projects</a></li>
+          <li><a href="#blog">Science Writing Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -333,12 +334,12 @@
         </div>
       </section><!-- /Resume Section [Lonely Bootstrap Addition] -->
 
-    <!-- Portfolio Section -->
+    <!-- Technology Projects Section -->
     <section id="portfolio" class="portfolio section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
+        <h2>Technical Projects</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
@@ -348,8 +349,8 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-writing">Science Writing</li>
-            <li data-filter=".filter-projects">Technical Projects</li>
+            <li data-filter=".filter-writing">API Projects</li>
+            <li data-filter=".filter-projects">Coding Projects</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -358,9 +359,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Science Writing 1</h4>
+                  <h4>API Project 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="Science Writing 1" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/app-1.jpg" title="API Project 1" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -370,9 +371,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Technical Projects 1</h4>
+                  <h4>Coding Projects 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-1.jpg" title="Technical Projects 1" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/product-1.jpg" title="Coding Projects 1" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -382,9 +383,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Science Writing 2</h4>
+                  <h4>API Project 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-2.jpg" title="Science Writing 2" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/app-2.jpg" title="API Project 2" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -394,9 +395,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Technical Projects 2</h4>
+                  <h4>Coding Projects 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-2.jpg" title="Technical Projects 2" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/product-2.jpg" title="Coding Projects 2" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -406,9 +407,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Science Writing 3</h4>
+                  <h4>API Project 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-3.jpg" title="Science Writing 3" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/app-3.jpg" title="API Project 3" data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -418,9 +419,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Technical Projects 3</h4>
+                  <h4>Coding Projects 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-3.jpg" title="Technical Projects 3" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/product-3.jpg" title="Coding Projects 3" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -432,8 +433,133 @@
 
       </div>
 
-    </section><!-- /Portfolio Section -->
+    </section><!-- /Technology Projects Section -->
 
+    <!--Blog Section - Accordion Style-->
+<section id="blog-accordion" class="py-5">
+  <div class="container">
+    <div class="section-header text-center mb-4">
+      <h2 class="mb-1">From the Blog</h2>
+      <p class="text-muted mb-0">Latest posts, summaries and quick links — expand to read more.</p>
+    </div>
+
+    <div class="accordion" id="accordionBlog">
+      <!-- Post 1 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button collapsed d-flex align-items-center" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
+                  aria-controls="collapseOne">
+            <div class="me-3 blog-meta text-muted small">
+              <div>Sep 10, 2025</div>
+              <div class="mt-1">Design · 3 min read</div>
+            </div>
+            <div class="flex-grow-1 text-start">
+              <strong class="d-block">Designing for Clarity: Minimal UI Patterns</strong>
+              <span class="text-muted d-block small">How to reduce cognitive load while improving usability.</span>
+            </div>
+            <!-- caret will be rotated by JS when expanded -->
+            <span class="accordion-caret ms-3"></span>
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+             data-bs-parent="#accordionBlog">
+          <div class="accordion-body">
+            <div class="row g-3 align-items-start">
+              <div class="col-lg-4">
+                <img src="assets/img/blog/design-clarity.jpg" alt="Design clarity" class="img-fluid rounded">
+              </div>
+              <div class="col-lg-8">
+                <p class="mb-2">Simplicity is a process. In this post we walk through techniques to simplify interactions,
+                   prioritize content, and design helpful affordances that guide users without overwhelming them.</p>
+                <a href="/blog/designing-for-clarity.html" class="btn btn-sm btn-primary">Read full article</a>
+                <div class="mt-3 small text-muted">Tags: <span class="badge bg-light text-dark">Design</span>
+                  <span class="badge bg-light text-dark">UX</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Post 2 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed d-flex align-items-center" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                  aria-controls="collapseTwo">
+            <div class="me-3 blog-meta text-muted small">
+              <div>Aug 25, 2025</div>
+              <div class="mt-1">Development · 6 min read</div>
+            </div>
+            <div class="flex-grow-1 text-start">
+              <strong class="d-block">Small JS Patterns for Faster Pages</strong>
+              <span class="text-muted d-block small">Practical patterns to reduce bundle size and improve performance.</span>
+            </div>
+            <span class="accordion-caret ms-3"></span>
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+             data-bs-parent="#accordionBlog">
+          <div class="accordion-body">
+            <div class="row g-3 align-items-start">
+              <div class="col-lg-4">
+                <img src="assets/img/blog/js-patterns.jpg" alt="JS patterns" class="img-fluid rounded">
+              </div>
+              <div class="col-lg-8">
+                <p class="mb-2">This article covers a handful of focused strategies — such as defer/lazy loading, micro-modules,
+                   and event delegation — to keep your pages snappy without a big framework.</p>
+                <a href="/blog/js-patterns.html" class="btn btn-sm btn-primary">Read full article</a>
+                <div class="mt-3 small text-muted">Tags: <span class="badge bg-light text-dark">JavaScript</span>
+                  <span class="badge bg-light text-dark">Performance</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Post 3 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed d-flex align-items-center" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                  aria-controls="collapseThree">
+            <div class="me-3 blog-meta text-muted small">
+              <div>Jul 15, 2025</div>
+              <div class="mt-1">Career · 4 min read</div>
+            </div>
+            <div class="flex-grow-1 text-start">
+              <strong class="d-block">Freelancing Tips: Finding Better Clients</strong>
+              <span class="text-muted d-block small">Practical tactics to raise your rates and attract the right projects.</span>
+            </div>
+            <span class="accordion-caret ms-3"></span>
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+             data-bs-parent="#accordionBlog">
+          <div class="accordion-body">
+            <div class="row g-3 align-items-start">
+              <div class="col-lg-4">
+                <img src="assets/img/blog/freelance-clients.jpg" alt="Freelance clients" class="img-fluid rounded">
+              </div>
+              <div class="col-lg-8">
+                <p class="mb-2">Learn how to qualify leads, package your work, and negotiate terms that make projects profitable and enjoyable.</p>
+                <a href="/blog/freelancing-tips.html" class="btn btn-sm btn-primary">Read full article</a>
+                <div class="mt-3 small text-muted">Tags: <span class="badge bg-light text-dark">Freelance</span>
+                  <span class="badge bg-light text-dark">Business</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div> <!-- /.accordion -->
+  </div> <!-- /.container -->
+</section>
+<!-- End Blog Section - Accordion Style -->
+ 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
 
